--- a/header.html
+++ b/header.html
@@ -15,9 +15,8 @@
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span><a href="http://www.networkupstools.org/" target="_blank"><strong><span style="color: rgba(0, 0, 0, 0.9);">Network UPS Tools</span></strong></a></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="./" target="_top">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/cgi-bin/nut/upsstats.cgi" target="_parent">Statistics</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/cgi-bin/nut/upsset.cgi" target="_parent">Settings</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/cgi-bin/nut/upsstats.cgi" target="mainFrame">Statistics</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/cgi-bin/nut/upsset.cgi" target="mainFrame">Settings</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://wiki.ubuntuusers.de/USV/NUT/" target="_blank">Docs</a></li>
                 </ul>
             </div>
