--- a/upsstats.html
+++ b/upsstats.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Network UPS Tools upsstats : UPS Status</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Raleway.css">
+    <link rel="stylesheet" href="/nut/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/nut/assets/css/Raleway.css">
 </head>
 
 <body>
@@ -50,8 +50,8 @@
             </table>
         </div>
     </div>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/startup-modern.js"></script>
+    <script src="/nut/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/nut/assets/js/startup-modern.js"></script>
 </body>
 
 </html>
