--- a/upsstats.html
+++ b/upsstats.html
@@ -1,20 +1,43 @@
+<!-- upsstats template file -->
+
+<!--
+	This (upsstats.html) is the default template file which is used
+	when upsstats.cgi is loaded with no arguments.
+
+	It usually contains a FOREACHUPS block to iterate through every
+	UPS in the hosts.conf.
+
+	See upsstats.html(5) for more information on template files.
+-->
+
+<!-- change this to TEMPF if you don't like Celsius. -->
+
+@TEMPC@
+@UPSSTATSPATH upsstats.cgi@
+@UPSIMAGEPATH upsimage.cgi@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
+	@REFRESH@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Network UPS Tools upsstats : UPS Status</title>
-    <link rel="stylesheet" href="/nut/assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/nut/assets/css/Raleway.css">
+    <title>Network UPS Tools upsstats
+      @VERSION@
+	  : UPS Status
+	</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/Raleway.css">
+	@REFRESH@
 </head>
 
 <body>
     <div class="container">
-        <h1>Network UPS Tools upsstats@VERSION@</h1>
+        <h1>Network UPS Tools upsstats @VERSION@</h1>
         <h4 style="margin-bottom: 32px;">@DATE %a %b %d %X %Z %Y@</h4>
         <div class="table-responsive">
-            <table class="table table-striped table-striped-columns table-hover table-bordered">
+            <table class="table table-striped table-striped-columns table-hover">
                 <thead>
                     <tr>
                         <th>System</th>
@@ -30,28 +53,123 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr></tr>
-                    <tr>
-                        <td class="t1">@HOSTLINK@</td>
-                        <td class="t1">@VAR ups.model@</td>
-                        <td>@STATUS@</td>
-                        <td class="t2">@IFSUPP battery.charge@@VAR battery.charge@%@ENDIF@</td>
-                        <td class="t2">@ELSE@@IFSUPP input.L2-N.voltage@@IFBETWEEN input.transfer.low input.transfer.high input.L1-N.voltage@@IFBETWEEN input.transfer.low input.transfer.high input.L2-N.voltage@@IFBETWEEN input.transfer.low input.transfer.high input.L3-N.voltage@</td>
-                        <td class="t2">@ELSE@@IFBETWEEN input.transfer.low input.transfer.high input.voltage@</td>
-                        <td class="t2">@ELSE@</td>
-                        <td style="background: red;">@ENDIF@@IFSUPP input.L2-L3.voltage@@VAR input.L1-L2.voltage@@VAR input.L2-L3.voltage@@VAR input.L3-L1.voltage@@ELSE@@IFSUPP input.L2-N.voltage@@VAR input.L1-N.voltage@@VAR input.L2-N.voltage@@VAR input.L3-N.voltage@@ELSE@@IFSUPP input.voltage@@VAR input.voltage@@ENDIF@</td>
-                        <td class="t2">@IFSUPP output.L2-L3.voltage@@VAR output.L1-L2.voltage@@VAR output.L2-L3.voltage@@VAR output.L3-L1.voltage@@ELSE@@IFSUPP output.L2-N.voltage@@VAR output.L1-N.voltage@@VAR output.L2-N.voltage@@VAR output.L3-N.voltage@@ELSE@@IFSUPP output.voltage@@VAR output.voltage@@ENDIF@</td>
-                        <td class="t2">@IFSUPP output.L2.power.percent@@VAR output.L1.power.percent@@VAR output.L2.power.percent@@VAR output.L3.power.percent@@ELSE@@IFSUPP output.L2.realpower.percent@@VAR output.L1.realpower.percent@@VAR output.L2.realpower.percent@@VAR output.L3.realpower.percent@@ELSE@@IFSUPP ups.load@@VAR ups.load@%@ENDIF@</td>
-                        <td class="t2">@IFSUPP ups.temperature@@UPSTEMP@@DEGREES@@ELSE@@IFSUPP battery.temperature@@BATTTEMP@@DEGREES@@ENDIF@</td>
-                        <td class="t2">@IFSUPP battery.runtime@@RUNTIME@@ENDIF@</td>
-                        <td class="t2">@TREELINK@</td>
-                    </tr>
+@FOREACHUPS@
+
+<tr>
+<td class="t1">
+@HOSTLINK@
+</td>
+
+<td class="t1">
+@VAR ups.model@
+</td>
+
+<td style="background:@STATUSCOLOR@">
+@STATUS@
+</td>
+
+<td class="t2">
+@IFSUPP battery.charge@
+@VAR battery.charge@
+%
+@ENDIF@
+</td>
+
+@IFSUPP input.L2-L3.voltage@
+@IFBETWEEN input.transfer.low input.transfer.high input.L1-L2.voltage@
+@IFBETWEEN input.transfer.low input.transfer.high input.L2-L3.voltage@
+@IFBETWEEN input.transfer.low input.transfer.high input.L3-L1.voltage@
+<td class="t2">
+@ELSE@
+@IFSUPP input.L2-N.voltage@
+@IFBETWEEN input.transfer.low input.transfer.high input.L1-N.voltage@
+@IFBETWEEN input.transfer.low input.transfer.high input.L2-N.voltage@
+@IFBETWEEN input.transfer.low input.transfer.high input.L3-N.voltage@
+<td class="t2">
+@ELSE@
+@IFBETWEEN input.transfer.low input.transfer.high input.voltage@
+<td class="t2">
+@ELSE@
+<td style="background:red;">
+@ENDIF@
+
+@IFSUPP input.L2-L3.voltage@
+@VAR input.L1-L2.voltage@
+@VAR input.L2-L3.voltage@
+@VAR input.L3-L1.voltage@
+@ELSE@
+@IFSUPP input.L2-N.voltage@
+@VAR input.L1-N.voltage@
+@VAR input.L2-N.voltage@
+@VAR input.L3-N.voltage@
+@ELSE@
+@IFSUPP input.voltage@
+@VAR input.voltage@
+@ENDIF@
+</td>
+
+<td class="t2">
+@IFSUPP output.L2-L3.voltage@
+@VAR output.L1-L2.voltage@
+@VAR output.L2-L3.voltage@
+@VAR output.L3-L1.voltage@
+@ELSE@
+@IFSUPP output.L2-N.voltage@
+@VAR output.L1-N.voltage@
+@VAR output.L2-N.voltage@
+@VAR output.L3-N.voltage@
+@ELSE@
+@IFSUPP output.voltage@
+@VAR output.voltage@
+@ENDIF@
+</td>
+
+<td class="t2">
+@IFSUPP output.L2.power.percent@
+@VAR output.L1.power.percent@
+@VAR output.L2.power.percent@
+@VAR output.L3.power.percent@
+@ELSE@
+@IFSUPP output.L2.realpower.percent@
+@VAR output.L1.realpower.percent@
+@VAR output.L2.realpower.percent@
+@VAR output.L3.realpower.percent@
+@ELSE@
+@IFSUPP ups.load@
+@VAR ups.load@
+%
+@ENDIF@
+</td>
+
+<td class="t2">
+@IFSUPP ups.temperature@
+@UPSTEMP@
+@DEGREES@
+@ELSE@
+@IFSUPP battery.temperature@
+@BATTTEMP@
+@DEGREES@
+@ENDIF@
+</td>
+
+<td class="t2">
+@IFSUPP battery.runtime@
+@RUNTIME@
+@ENDIF@
+</td>
+
+<td class="t2">
+@TREELINK@
+</td>
+</tr>
+
+@ENDFOR@
                 </tbody>
             </table>
         </div>
     </div>
-    <script src="/nut/assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/nut/assets/js/startup-modern.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/startup-modern.js"></script>
 </body>
 
 </html>
