--- a/upsstats.html
+++ b/upsstats.html
@@ -27,8 +27,8 @@
       @VERSION@
 	  : UPS Status
 	</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Raleway.css">
+    <link rel="stylesheet" href="/nut/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/nut/assets/css/Raleway.css">
 	@REFRESH@
 </head>
 
@@ -168,8 +168,8 @@
             </table>
         </div>
     </div>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/startup-modern.js"></script>
+    <script src="/nut/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/nut/assets/js/startup-modern.js"></script>
 </body>
 
 </html>
